@@ -143,7 +143,7 @@ dash-period. Should be between 0.0 (no line) and 1.0 (continuous
 line).")
      
      (default-direction ,ly:dir? "Direction determined by note head positions.")
-     (direction ,ly:dir? "Up or down, left or right?")
+     (direction ,ly:dir? "Up or down, left or right?  (UP=1, DOWN=-1, LEFT=-1, RIGHT=1)")
      (dot-color ,symbol? "Color of dots.  Options include 
 @code{black} and @code{white}.")
      (dot-radius ,number? "Radius of dots.")
